class05/k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: main-server
  template:
    metadata:
      labels:
        app: main-server
    spec:
      containers:
      - name: main-server
        image: cohort_express
        imagePullPolicy: Never
        ports:
          - containerPort: 3000
        resources:
          requests:
            memory: "64Mi"
            cpu: "256m"
          limits:
            memory: "128Mi"
            cpu: "512m"
