class05/k8s/product-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: product-server
  template:
    metadata:
      labels:
        app: product-server
    spec:
      containers:
      - name: product
        image: product_server
        imagePullPolicy: Never
        ports:
          - containerPort: 8080
        resources:
          requests:
            memory: "64Mi"
            cpu: "256m"
          limits:
            memory: "128Mi"
            cpu: "512m"
