class05/k8s/product-service.yml
kind: Service
apiVersion: v1
metadata:
  name:  product-server-service
spec:
  selector:
    app:  product-server
  type: ClusterIP 
  ports:
  - name:  product-service-port
    port:  80
    targetPort:  8080
