class05/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: express-ingress
  labels:
    app.kubernetes.io/name: express-ingress
spec:
  ingressClassName: nginx
  rules:
   - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: main-server-service
            port:
              number: 80

   - http:
      paths:           
      - path: /api/product
        pathType: Prefix
        backend:
          service:
            name: product-server-service
            port:
              number: 80
